--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 attrs==22.1.0
 backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 cclib==1.7.2
 certifi==2022.9.24
 charset-normalizer==2.1.1
