--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ plotly==5.11.0
 PubChemPy==1.0.4
 pybtex==0.24.0
 pydantic==1.10.2
-# pymatgen==2022.11.7  # TODO figure out what to do with this
+pymatgen==2022.11.7;python_version<"2.8"
 pymongo==3.10.0
 pyparsing==3.0.9
 pyrsistent==0.19.2
