--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 contourpy==1.0.6
 cycler==0.11.0
-dbstep==1.0.0
+git+https://github.com/patonlab/DBSTEP.git
 Django==2.2.28
 dnspython==2.2.1
 dotty-dict==1.3.1
