--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ rdkit==2022.9.1
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+seaborn==0.12.1
 scipy==1.8
 selfies==2.1.1
 six==1.16.0
