--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ future==0.18.2
 idna==3.4
 importlib-metadata==5.0.0
 importlib-resources==5.10.0
+interruptingcow==0.8
 inflection==0.5.1
 jsonschema==3.2.0
 kiwisolver==1.4.4
