--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ asgiref==3.5.2
 atomate==1.0.3
 attrs==22.1.0
 Babel==2.11.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 bcrypt==4.0.1
 boto3==1.26.82
 botocore==1.29.82
