--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ asgiref==3.5.2
 atomate==1.0.3
 attrs==22.1.0
 Babel==2.11.0
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
 bcrypt==4.0.1
 boto3==1.26.82
 botocore==1.29.82
@@ -80,6 +80,7 @@ pymatgen==2022.11.7
 pymatgen-analysis-diffusion==2022.7.21
 pymongo==4.3.3
 PyNaCl==1.5.0
+pyOpenSSL==23.0.0
 pyparsing==3.0.9
 pyrsistent==0.19.2
 python-dateutil==2.8.2
