--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ latexcodec==2.0.1
 llvmlite==0.39.1
 Markdown==3.4.1
 MarkupSafe==2.1.1
-matplotlib
+matplotlib~=3.1.3
 mongogrant==0.3.3
 mongomock==4.1.2
 monty==2022.9.9
@@ -77,7 +77,7 @@ pydash==6.0.2
 Pygments==2.13.0
 pymatgen==2022.11.7
 pymatgen-analysis-diffusion==2022.7.21
-pymongo==4.2.0
+pymongo~=4.3.3
 PyNaCl==1.5.0
 pyOpenSSL==23.0.0
 pyparsing==3.0.9
@@ -120,3 +120,9 @@ uncertainties==3.1.7
 urllib3==1.26.12
 Werkzeug==2.2.3
 zipp==3.10.0
+
+elsapy~=0.5.1
+ocelot~=0.2
+setuptools~=60.2.0
+articledownloader~=9.1.1
+ChemDataExtractor~=1.3.0
