--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ paramiko>=3.0.0
 Pillow>=9.3.0
 Pint>=0.20.1
 PubChemPy>=1.0.4
-pymatgen>=2022.11.7
+# pymatgen>=2022.11.7
 pymongo>=4.3.3
 python-dateutil>=2.8.2
 rdkit>=2022.9.1
