--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,13 @@ articledownloader>=9.1.1
 # Django>=2.2.28
 # elsapy>=0.5.1
 # FireWorks>=2.0.3
-# inflection>=0.5.1
-# interruptingcow>=0.8
-# jsonschema>=3.2.0
-# matplotlib>=3.1.3
-# monty>=2022.9.9
-# nanoid>=2.0.0
-# numpy>=1.23.5
+inflection>=0.5.1
+interruptingcow>=0.8
+jsonschema>=3.2.0
+matplotlib>=3.1.3
+monty>=2022.9.9
+nanoid>=2.0.0
+numpy>=1.23.5
 ocelot>=0.2
 pandas>=1.5.1
 paramiko>=3.0.0
