--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ articledownloader>=9.1.1
 # atomate>=1.0.3
 # cclib>=1.7.2
 # ChemDataExtractor>=1.3.0
-# dbstep>=1.0.0
-# Django>=2.2.28
-# elsapy>=0.5.1
-# FireWorks>=2.0.3
+dbstep>=1.0.0
+Django>=2.2.28
+elsapy>=0.5.1
+FireWorks>=2.0.3
 inflection>=0.5.1
 interruptingcow>=0.8
 jsonschema>=3.2.0
