--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 articledownloader>=9.1.1
 atomate>=1.0.3
 cclib>=1.7.2
-# ChemDataExtractor>=1.3.0
+chemdataextractor2
 dbstep>=1.0.0
 Django>=2.2.28
+dotty_dict>=1.3.1
 elsapy>=0.5.1
 FireWorks>=2.0.3
 inflection>=0.5.1
@@ -22,6 +23,7 @@ PubChemPy>=1.0.4
 # pymatgen>=2022.11.7
 pymongo>=4.3.3
 python-dateutil>=2.8.2
+python_jsonschema_objects>=0.4.1
 rdkit>=2022.9.1
 requests>=2.28.1
 scipy>=1.8.0
